--- a/public/index.html
+++ b/public/index.html
@@ -1,169 +1,199 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Axolotl Stats</title>
     <style>
-        :root {
-            --primary-color: #ff69b4;
-            --secondary-color: #4a90e2;
-            --background-color: #f5f5f5;
-            --card-background: #ffffff;
-        }
+      :root {
+        --primary-color: #ff69b4;
+        --secondary-color: #4a90e2;
+        --background-color: #f5f5f5;
+        --card-background: #ffffff;
+      }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background-color: var(--background-color);
-            color: #333;
-            line-height: 1.6;
-        }
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Oxygen, Ubuntu, Cantarell, sans-serif;
+        background-color: var(--background-color);
+        color: #333;
+        line-height: 1.6;
+      }
 
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 2rem;
+      }
+
+      .header {
+        text-align: center;
+        margin-bottom: 3rem;
+      }
+
+      .header h1 {
+        color: var(--primary-color);
+        font-size: 2.5rem;
+        margin-bottom: 1rem;
+      }
+
+      .stats-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 2rem;
+        margin-bottom: 3rem;
+      }
+
+      .stats-card {
+        background: var(--card-background);
+        border-radius: 12px;
+        padding: 1.5rem;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s ease;
+      }
+
+      .stats-card:hover {
+        transform: translateY(-5px);
+      }
+
+      .stats-card h2 {
+        color: var(--secondary-color);
+        margin-bottom: 1rem;
+        font-size: 1.5rem;
+      }
+
+      .stats-list {
+        list-style: none;
+      }
+
+      .stats-list li {
+        padding: 0.5rem 0;
+        border-bottom: 1px solid #eee;
+      }
+
+      .stats-list li:last-child {
+        border-bottom: none;
+      }
+
+      .loading {
+        text-align: center;
+        font-size: 1.2rem;
+        color: var(--secondary-color);
+      }
+
+      @media (max-width: 768px) {
         .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 3rem;
+          padding: 1rem;
         }
 
         .header h1 {
-            color: var(--primary-color);
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
+          font-size: 2rem;
         }
+      }
 
-        .stats-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-bottom: 3rem;
-        }
-
-        .stats-card {
-            background: var(--card-background);
-            border-radius: 12px;
-            padding: 1.5rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s ease;
-        }
-
-        .stats-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .stats-card h2 {
-            color: var(--secondary-color);
-            margin-bottom: 1rem;
-            font-size: 1.5rem;
-        }
-
-        .stats-list {
-            list-style: none;
-        }
-
-        .stats-list li {
-            padding: 0.5rem 0;
-            border-bottom: 1px solid #eee;
-        }
-
-        .stats-list li:last-child {
-            border-bottom: none;
-        }
-
-        .loading {
-            text-align: center;
-            font-size: 1.2rem;
-            color: var(--secondary-color);
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 1rem;
-            }
-
-            .header h1 {
-                font-size: 2rem;
-            }
-        }
+      footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        background-color: #f1f1f1; /* Optional: Add background color */
+        padding: 10px 0; /* Optional: Add padding */
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <header class="header">
-            <h1>🦎 Axolotl Stats</h1>
-            <p>Track your axolotl collection and statistics</p>
-        </header>
+      <header class="header">
+        <h1>🦎 Axolotl Stats</h1>
+        <p>Track your axolotl collection and statistics</p>
+      </header>
 
-        <div class="stats-grid">
-            <div class="stats-card">
-                <h2>Global Stats</h2>
-                <ul class="stats-list" id="globalStats">
-                    <li>Loading...</li>
-                </ul>
-            </div>
-
-            <div class="stats-card">
-                <h2>Top Channels</h2>
-                <ul class="stats-list" id="topChannels">
-                    <li>Loading...</li>
-                </ul>
-            </div>
-
-            <div class="stats-card">
-                <h2>Leaderboard</h2>
-                <ul class="stats-list" id="leaderboard">
-                    <li>Loading...</li>
-                </ul>
-            </div>
+      <div class="stats-grid">
+        <div class="stats-card">
+          <h2>Global Stats</h2>
+          <ul class="stats-list" id="globalStats">
+            <li>Loading...</li>
+          </ul>
         </div>
+
+        <div class="stats-card">
+          <h2>Top Channels</h2>
+          <ul class="stats-list" id="topChannels">
+            <li>Loading...</li>
+          </ul>
+        </div>
+
+        <div class="stats-card">
+          <h2>Leaderboard</h2>
+          <ul class="stats-list" id="leaderboard">
+            <li>Loading...</li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <script>
-        async function fetchStats() {
-            try {
-                const response = await fetch('/api/axolotls/stats');
-                const data = await response.json();
+      async function fetchStats() {
+        try {
+          const response = await fetch("/api/axolotls/stats");
+          const data = await response.json();
 
-                // Update Global Stats
-                document.getElementById('globalStats').innerHTML = `
+          // Update Global Stats
+          document.getElementById("globalStats").innerHTML = `
                     <li>Total Rolls: ${data.total_rolls.toLocaleString()}</li>
                     <li>Unique Users: ${data.unique_users.toLocaleString()}</li>
                 `;
 
-                // Update Top Channels
-                document.getElementById('topChannels').innerHTML = data.top_channels
-                    .map(channel => `
-                        <li>${channel.channel}: ${channel.total_rolls.toLocaleString()} rolls</li>
-                    `)
-                    .join('');
+          // Update Top Channels
+          document.getElementById("topChannels").innerHTML = data.top_channels
+            .map(
+              (channel) => `
+                        <li>${
+                          channel.channel
+                        }: ${channel.total_rolls.toLocaleString()} rolls</li>
+                    `
+            )
+            .join("");
 
-                // Update Leaderboard
-                document.getElementById('leaderboard').innerHTML = data.leaderboard
-                    .slice(0, 10)
-                    .map((user, index) => `
-                        <li>${index + 1}. ${user.username}: ${user.total_rolls.toLocaleString()} rolls</li>
-                    `)
-                    .join('');
-            } catch (error) {
-                console.error('Error fetching stats:', error);
-            }
+          // Update Leaderboard
+          document.getElementById("leaderboard").innerHTML = data.leaderboard
+            .slice(0, 10)
+            .map(
+              (user, index) => `
+                        <li>${index + 1}. ${
+                user.username
+              }: ${user.total_rolls.toLocaleString()} rolls</li>
+                    `
+            )
+            .join("");
+        } catch (error) {
+          console.error("Error fetching stats:", error);
         }
+      }
 
-        // Fetch stats on page load
-        fetchStats();
+      // Fetch stats on page load
+      fetchStats();
 
-        // Refresh stats every 5 minutes
-        setInterval(fetchStats, 300000);
+      // Refresh stats every 5 minutes
+      setInterval(fetchStats, 300000);
     </script>
-</body>
+
+    <footer>
+      <!-- <p>Created by Memerson</p> -->
+      <p>
+        Memerson ·
+        <a
+          href="https://github.com/memerson12/MCSR-Ranked-Matches-Today/tree/convert-to-express"
+          target="_blank"
+          >GitHub</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
